--- a/lables.yml
+++ b/lables.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: lable-demo
-  lables:
+  name: label-demo
+  labels:
     Course: devops
     duration: 100
 spec:
