--- a/resources.yaml
+++ b/resources.yaml
@@ -10,8 +10,8 @@ spec:
     - containerPort: 80
     resources:
       requests:
-        cpu: "100m"
-        memory: "68mi"
+        cpu: "80m"
+        memory: "50Mi"
       limits:
-        cpu: "200m"
-        memory: "128mi"
+        cpu: "100m"
+        memory: "70Mi"
