--- a/pod-config.yaml
+++ b/pod-config.yaml
@@ -19,7 +19,15 @@ spec:
         configMapKeyRef:
           name: devopsconfig
           key: Trainer
-  - name: helo-pod-1
+
+--------
+apiVersion: v1
+kind: Pod
+metadata:
+  name: config-pod-1
+spec:
+  containers:
+  - name: hello-pod-1
     image: nginx
     ports:
     - containerPort: 80
