--- a/clusterip.yaml
+++ b/clusterip.yaml
@@ -21,6 +21,6 @@ spec:
     app: nginx
     demo: service
   ports:
-    protocol: TCP
+  - protocol: TCP
     port: 80 # service port
     targetPort: 80 # container port
